fix classes and animation for second gallery

--- a/src/index.html
+++ b/src/index.html
@@ -214,114 +214,136 @@
     <section class="where-to-find js-scroll">
       <div class="container">
         <div class="row justify-content-center">
-          <h2 class="where-to-find__title col-12 js-scroll__element scroll">Where to find us</h2>
+          <div class="col-12">
+            <h2 class="where-to-find__title js-scroll__element scroll">Where to find us</h2>
+          </div>
 
-          <p class="where-to-find__description col-12 col-lg-8 js-scroll__element scroll">
-            Our main offices are located in two of the most vibrant and forward-thinking cities in Europe–Kyiv and Barcelona.*
-          </p>
+          <div class="col-12 col-lg-8">
+            <p class="where-to-find__description js-scroll__element scroll">
+              Our main offices are located in two of the most vibrant and forward-thinking cities in Europe–Kyiv and Barcelona.*
+            </p>
+          </div>
 
           <div class="where-to-find__gallery gallery">
-            <div class="gallery__controls row justify-content-center js-scroll__element scroll">
-              <div class="gallery__button-wrp col-6 col-lg-4 col-xl-3">
-                <img
-                  src="./images/whereToFind/kyiv/0.png"
-                  alt="Kyiv"
-                  class="gallery__button-img"
-                >
-                <button
-                  type="button"
-                  class="gallery__button gallery__button--active"
-                >
-                  Kyiv
-                </button>
-              </div>
+            <div class="gallery__controls js-scroll__element scroll">
+              <div class="row justify-content-center">
+                <div class="col-6 col-lg-4 col-xl-3">
+                  <div class="gallery__button-wrp">
+                    <img
+                      src="./images/whereToFind/kyiv/0.png"
+                      alt="Kyiv"
+                      class="gallery__button-img"
+                    >
+                    <button
+                      type="button"
+                      class="gallery__button gallery__button--active"
+                    >
+                      Kyiv
+                    </button>
+                  </div>
+                </div>
 
-              <div class="gallery__button-wrp col-6 col-lg-4 col-xl-3">
-                <img
-                  src="./images/whereToFind/barcelona/0.png"
-                  alt="Barcelona"
-                  class="gallery__button-img"
-                >
-                <button
-                  type="button"
-                  class="gallery__button"
-                >
-                  Barcelona
-                </button>
+                <div class="col-6 col-lg-4 col-xl-3">
+                  <div class="gallery__button-wrp">
+                    <img
+                      src="./images/whereToFind/barcelona/0.png"
+                      alt="Barcelona"
+                      class="gallery__button-img"
+                    >
+                    <button
+                      type="button"
+                      class="gallery__button"
+                    >
+                      Barcelona
+                    </button>
+                  </div>
+                </div>
               </div>
             </div>
 
-            <div class="gallery__photos row justify-content-center">
-              <div class="gallery__photo-item gallery__photo--large-height col-12 col-lg-6">
-                <div class="gallery__photo-wrp js-scroll__element scroll">
-                  <img
-                    src="./images/whereToFind/kyiv/1.png"
-                    alt="Kyiv"
-                    loading="lazy"
-                    class="gallery__photo gallery__photo--show"
-                  >
+            <div class="row justify-content-center">
+              <div class="col-12 col-lg-6">
+                <div class="gallery__photo-item gallery__photo--large-height">
+                  <div class="gallery__photo-wrp js-scroll__element scroll">
+                    <img
+                      src="./images/whereToFind/kyiv/1.png"
+                      alt="Kyiv"
+                      loading="lazy"
+                      class="gallery__photo gallery__photo--show"
+                    >
 
-                  <img
-                    src="./images/whereToFind/barcelona/1.png"
-                    alt="Barcelona"
-                    loading="lazy"
-                    class="gallery__photo"
-                  >
+                    <img
+                      src="./images/whereToFind/barcelona/1.png"
+                      alt="Barcelona"
+                      loading="lazy"
+                      class="gallery__photo"
+                    >
+                  </div>
                 </div>
               </div>
 
-              <div class="gallery__group col-12 col-lg-6 row">
-                <div class="gallery__photo-item gallery__photo--small-height order-1 order-lg-0 col-12">
-                  <div class="gallery__photo-wrp js-scroll__element scroll">
-                    <img
-                      src="./images/whereToFind/kyiv/2.png"
-                      alt="Kyiv"
-                      loading="lazy"
-                      class="gallery__photo gallery__photo--show"
-                    >
+              <div class="col-12 col-lg-6 row p-0 px-lg-2">
+                <div class="gallery__group">
+                  <div class=" order-1 order-lg-0 col-12">
+                    <div class="gallery__photo-item gallery__photo--small-height">
+                      <div class="gallery__photo-wrp js-scroll__element scroll">
+                        <img
+                          src="./images/whereToFind/kyiv/2.png"
+                          alt="Kyiv"
+                          loading="lazy"
+                          class="gallery__photo gallery__photo--show"
+                        >
 
-                    <img
-                      src="./images/whereToFind/barcelona/2.png"
-                      alt="Barcelona"
-                      loading="lazy"
-                      class="gallery__photo"
-                    >
+                        <img
+                          src="./images/whereToFind/barcelona/2.png"
+                          alt="Barcelona"
+                          loading="lazy"
+                          class="gallery__photo"
+                        >
+                      </div>
+                    </div>
                   </div>
-                </div>
 
-                <div class="gallery__photo-item gallery__photo--small-height col-6">
-                  <div class="gallery__photo-wrp js-scroll__element scroll">
-                    <img
-                      src="./images/whereToFind/kyiv/3.png"
-                      alt="Kyiv"
-                      loading="lazy"
-                      class="gallery__photo gallery__photo--show"
-                    >
+                  <div class="row m-0">
+                    <div class="col-6">
+                      <div class="gallery__photo-item gallery__photo--small-height">
+                        <div class="gallery__photo-wrp js-scroll__element scroll">
+                          <img
+                            src="./images/whereToFind/kyiv/3.png"
+                            alt="Kyiv"
+                            loading="lazy"
+                            class="gallery__photo gallery__photo--show"
+                          >
 
-                    <img
-                      src="./images/whereToFind/barcelona/3.png"
-                      alt="Barcelona"
-                      loading="lazy"
-                      class="gallery__photo"
-                    >
-                  </div>
-                </div>
+                          <img
+                            src="./images/whereToFind/barcelona/3.png"
+                            alt="Barcelona"
+                            loading="lazy"
+                            class="gallery__photo"
+                          >
+                        </div>
+                      </div>
+                    </div>
 
-                <div class="gallery__photo-item gallery__photo--small-height col-6">
-                  <div class="gallery__photo-wrp js-scroll__element scroll">
-                    <img
-                      src="./images/whereToFind/kyiv/4.png"
-                      alt="Kyiv"
-                      loading="lazy"
-                      class="gallery__photo gallery__photo--show"
-                    >
+                    <div class="col-6">
+                      <div class="gallery__photo-item gallery__photo--small-height">
+                        <div class="gallery__photo-wrp js-scroll__element scroll">
+                          <img
+                            src="./images/whereToFind/kyiv/4.png"
+                            alt="Kyiv"
+                            loading="lazy"
+                            class="gallery__photo gallery__photo--show"
+                          >
 
-                    <img
-                      src="./images/whereToFind/barcelona/4.png"
-                      alt="Barcelona"
-                      loading="lazy"
-                      class="gallery__photo"
-                    >
+                          <img
+                            src="./images/whereToFind/barcelona/4.png"
+                            alt="Barcelona"
+                            loading="lazy"
+                            class="gallery__photo"
+                          >
+                        </div>
+                      </div>
+                    </div>
                   </div>
                 </div>
               </div>
