created value block, added style for value block and first image

--- a/src/index.html
+++ b/src/index.html
@@ -153,6 +153,119 @@
       </div>
     </section>
 
+    <section class="what-we-value js-scroll">
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-12">
+            <h2 class="what-we-value__title js-scroll__element scroll">
+              What we value
+            </h2>
+            <p class="what-we-value__description js-scroll__element scroll">
+              Our secret sauce for being a great team
+              behind an even greater product.
+            </p>
+          </div>
+
+          <div class="col-6 col-xl-4">
+            <div
+              class="what-we-value__value value js-scroll__element scroll"
+            >
+              <div class="value__title">
+                <h3 class="value__text">cusomer first</h3>
+              </div>
+              <img
+                class="value__image"
+                alt="customer first"
+                src="images/values/cusomer_first.svg"
+              >
+              </img>
+            </div>
+          </div>
+
+          <div class="col-6 col-xl-4">
+            <div
+              class="what-we-value__value value js-scroll__element scroll"
+            >
+              <div class="value__title">
+                <h3 class="value__text">human</h3>
+              </div>
+              <img
+                class="value__image"
+                alt="customer first"
+                src="images/values/cusomer_first.svg"
+              >
+              </img>
+            </div>
+          </div>
+
+          <div class="col-6 col-xl-4">
+            <div
+              class="what-we-value__value value js-scroll__element scroll"
+            >
+              <div class="value__title">
+                <h3 class="value__text">hackers</h3>
+              </div>
+              <img
+                class="value__image"
+                alt="customer first"
+                src="images/values/cusomer_first.svg"
+              >
+              </img>
+            </div>
+          </div>
+
+          <div class="col-6 col-xl-4">
+            <div
+              class="what-we-value__value value js-scroll__element scroll"
+            >
+              <div class="value__title">
+                <h3 class="value__text">hungry</h3>
+              </div>
+              <img
+                class="value__image"
+                alt="customer first"
+                src="images/values/cusomer_first.svg"
+              >
+              </img>
+            </div>
+          </div>
+
+          <div class="col-6 col-xl-4">
+            <div
+              class="what-we-value__value value js-scroll__element scroll"
+            >
+              <div class="value__title">
+                <h3 class="value__text">humble</h3>
+              </div>
+              <img
+                class="value__image"
+                alt="customer first"
+                src="images/values/cusomer_first.svg"
+              >
+              </img>
+            </div>
+          </div>
+
+          <div class="col-6 col-xl-4">
+            <div
+              class="what-we-value__value value js-scroll__element scroll"
+            >
+              <div class="value__title">
+                <h3 class="value__text">curious</h3>
+              </div>
+              <img
+                class="value__image"
+                alt="customer first"
+                src="images/values/cusomer_first.svg"
+              >
+              </img>
+            </div>
+          </div>
+
+        </div>
+      </div>
+    </section>
+
     <section class="work_with_us slogan slogan--red js-scroll">
       <div class="container">
         <div class="row slogan__wrapper">
