--- a/src/index.html
+++ b/src/index.html
@@ -53,7 +53,7 @@
       </div>
     </section>
 
-    <section class="language slogan slogan--green js-scroll">
+    <section class="language slogan slogan--green js-scroll js-background">
       <div class="container">
         <div class="row slogan__wrapper">
           <div class="slogan__text col-xl-7 col-lg-12">
@@ -153,7 +153,7 @@
       </div>
     </section>
 
-    <section class="work_with_us slogan slogan--red js-scroll">
+    <section class="work_with_us slogan slogan--red js-scroll js-background">
       <div class="container">
         <div class="row slogan__wrapper">
           <div class="slogan__text col-xl-5 col-lg-12">
@@ -580,7 +580,7 @@
       </div>
     </section>
 
-    <section class="shape_of_future slogan slogan--green js-scroll">
+    <section class="shape_of_future slogan slogan--green js-scroll js-background">
       <div class="container">
         <div class="row slogan__wrapper">
           <div class="slogan__text col-xl-5 col-lg-12">
