fixed value headings

--- a/src/index.html
+++ b/src/index.html
@@ -170,9 +170,7 @@
             <div
               class="what-we-value__value value js-scroll__element scroll"
             >
-              <div class="value__title">
-                <h3 class="value__text">cusomer first</h3>
-              </div>
+              <h3 class="value__title">cusomer first</h3>
               <img
                 class="value__image"
                 alt="customer first"
@@ -186,9 +184,7 @@
             <div
               class="what-we-value__value value js-scroll__element scroll"
             >
-              <div class="value__title">
-                <h3 class="value__text">human</h3>
-              </div>
+              <h3 class="value__title">human</h3>
               <img
                 class="value__image"
                 alt="customer first"
@@ -202,9 +198,7 @@
             <div
               class="what-we-value__value value js-scroll__element scroll"
             >
-              <div class="value__title">
-                <h3 class="value__text">hackers</h3>
-              </div>
+              <h3 class="value__title">hackers</h3>
               <img
                 class="value__image"
                 alt="customer first"
@@ -218,9 +212,7 @@
             <div
               class="what-we-value__value value js-scroll__element scroll"
             >
-              <div class="value__title">
-                <h3 class="value__text">hungry</h3>
-              </div>
+              <h3 class="value__title">hungry</h3>
               <img
                 class="value__image"
                 alt="customer first"
@@ -234,9 +226,7 @@
             <div
               class="what-we-value__value value js-scroll__element scroll"
             >
-              <div class="value__title">
-                <h3 class="value__text">humble</h3>
-              </div>
+              <h3 class="value__title">humble</h3>
               <img
                 class="value__image"
                 alt="customer first"
@@ -250,9 +240,7 @@
             <div
               class="what-we-value__value value js-scroll__element scroll"
             >
-              <div class="value__title">
-                <h3 class="value__text">curious</h3>
-              </div>
+              <h3 class="value__title">curious</h3>
               <img
                 class="value__image"
                 alt="customer first"
