add hoverCard data

--- a/src/index.html
+++ b/src/index.html
@@ -511,7 +511,10 @@
           </p>
 
           <div class="in-news__wrapper js-scroll__element scroll">
-            <div class="in-news__news news news--crunch">
+            <div
+              class="in-news__news news news--crunch"
+              data-hover-card="true"
+            >
               <div class="news__wrapper">
                 <h3 class="news__quotes">“</h3>
                 <div class="news__bottom">
@@ -532,7 +535,10 @@
               </div>
             </div>
 
-            <div class="in-news__news news news--forbes js-scroll__element scroll">
+            <div
+              class="in-news__news news news--forbes js-scroll__element scroll"
+              data-hover-card="true"
+            >
               <div class="news__wrapper">
                 <h3 class="news__quotes">“</h3>
                 <div class="news__bottom">
@@ -553,7 +559,10 @@
               </div>
             </div>
 
-            <div class="in-news__news news news--edsurge js-scroll__element scroll">
+            <div
+              class="in-news__news news news--edsurge js-scroll__element scroll"
+              data-hover-card="true"
+            >
               <div class="news__wrapper">
                 <h3 class="news__quotes">“</h3>
                 <div class="news__bottom">
