fixed card animation

--- a/src/index.html
+++ b/src/index.html
@@ -513,7 +513,7 @@
           <div class="in-news__wrapper js-scroll__element scroll">
             <div
               class="in-news__news news news--crunch"
-              data-hover-card="true"
+              data-hover="card"
             >
               <div class="news__wrapper">
                 <h3 class="news__quotes">“</h3>
@@ -537,7 +537,7 @@
 
             <div
               class="in-news__news news news--forbes js-scroll__element scroll"
-              data-hover-card="true"
+              data-hover="card"
             >
               <div class="news__wrapper">
                 <h3 class="news__quotes">“</h3>
@@ -561,7 +561,7 @@
 
             <div
               class="in-news__news news news--edsurge js-scroll__element scroll"
-              data-hover-card="true"
+              data-hover="card"
             >
               <div class="news__wrapper">
                 <h3 class="news__quotes">“</h3>
