done without glassdoor hover effect

--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,9 @@
           <div class="row promo__top">
             <div class="col-12 col-md-2">
               <div class="promo__logo">
-                <img src="./images/logo.png" alt="">
+                <a href="https://preply.com/">
+                  <img src="./images/logo.png" alt="">
+                </a>
               </div>
             </div>
             <div class="offset-md-7 col-md-3">
