--- a/src/index.html
+++ b/src/index.html
@@ -612,7 +612,10 @@
           </p>
 
           <div class="in-news__wrapper js-scroll__element scroll">
-            <div class="in-news__news news news--crunch">
+            <div
+              class="in-news__news news news--crunch"
+              data-hover="card"
+            >
               <div class="news__wrapper">
                 <h3 class="news__quotes">“</h3>
                 <div class="news__bottom">
@@ -633,7 +636,10 @@
               </div>
             </div>
 
-            <div class="in-news__news news news--forbes js-scroll__element scroll">
+            <div
+              class="in-news__news news news--forbes js-scroll__element scroll"
+              data-hover="card"
+            >
               <div class="news__wrapper">
                 <h3 class="news__quotes">“</h3>
                 <div class="news__bottom">
@@ -654,7 +660,10 @@
               </div>
             </div>
 
-            <div class="in-news__news news news--edsurge js-scroll__element scroll">
+            <div
+              class="in-news__news news news--edsurge js-scroll__element scroll"
+              data-hover="card"
+            >
               <div class="news__wrapper">
                 <h3 class="news__quotes">“</h3>
                 <div class="news__bottom">
