--- a/src/index.html
+++ b/src/index.html
@@ -10,46 +10,60 @@
   </head>
   <body>
     <section class="promo">
-      <div class="container promo__container">
-        <div class="row promo__top">
-          <div class="promo__logo col-12 col-md-2">
-            <img src="./images/logo.png" alt="">
-          </div>
-          <div class="promo__privacy offset-md-7 col-md-3">
-            <a href="#" class="link">Privacy Policy</a>
-          </div>
-        </div>
-        <div class="row">
-          <div class="promo__content col-12 js-scroll">
-            <p class="promo__subtitle js-scroll__element scroll">preply careers</p>
-            <h1 class="promo__title js-scroll__element scroll">Where your ideas create connections</h1>
-            <div class="js-scroll__element scroll">
-              <a href="#vacancies" class="btn">Browse open positions</a>
+      <div class="container">
+        <div class="promo__container">
+          <div class="row promo__top">
+            <div class="col-12 col-md-2">
+              <div class="promo__logo">
+                <a href="https://preply.com/">
+                  <img src="./images/logo.png" alt="">
+                </a>
+              </div>
+            </div>
+            <div class="offset-md-7 col-md-3">
+              <div class="promo__privacy">
+                <a href="#" class="link">Privacy Policy</a>
+              </div>
             </div>
           </div>
+          <div class="row">
+            <div class="col-12 js-scroll">
+              <div class="promo__content">
+                <div class="js-scroll__element scroll">
+                  <p class="promo__subtitle">preply careers</p>
+                </div>
+                <div class="js-scroll__element scroll">
+                  <h1 class="promo__title">Where your ideas create connections</h1>
+                </div>
+                <div class="js-scroll__element scroll">
+                  <a href="#vacancies" class="btn">Browse open positions</a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <a href="https://www.glassdoor.com/Reviews/Preply-Reviews-E1620838.htm" class="promo__glassdoor promo__glassdoor--big">
+            <p>Read employees review on:</p>
+            <div>
+              <img
+                src="./images/promo/glassdoor-logo.png"
+                loading="lazy"
+                alt=""
+              >
+              <img
+                src="./images/promo/glassdoor.png"
+                loading="lazy"
+                alt=""
+              >
+            </div>
+          </a>
+          <a href="https://www.glassdoor.com/Reviews/Preply-Reviews-E1620838.htm" class="promo__glassdoor promo__glassdoor--small">
+            <p>Read employees review on:</p>
+            <div>
+              <img src="./images/promo/glassdoor-logo-small.png" alt="">
+              <img src="./images/promo/glassdoor-name-small.png" alt="">
+            </div>
+          </a>
         </div>
-        <a href="https://www.glassdoor.com/Reviews/Preply-Reviews-E1620838.htm" class="promo__glassdoor promo__glassdoor--big">
-          <p>Read employees review on:</p>
-          <div>
-            <img
-              src="./images/promo/glassdoor-logo.png"
-              loading="lazy"
-              alt=""
-            >
-            <img
-              src="./images/promo/glassdoor.png"
-              loading="lazy"
-              alt=""
-            >
-          </div>
-        </a>
-        <a href="https://www.glassdoor.com/Reviews/Preply-Reviews-E1620838.htm" class="promo__glassdoor promo__glassdoor--small">
-          <p>Read employees review on:</p>
-          <div>
-            <img src="./images/promo/glassdoor-logo-small.png" alt="">
-            <img src="./images/promo/glassdoor-name-small.png" alt="">
-          </div>
-        </a>
       </div>
     </section>
 
