update basic markup for select logic

--- a/src/index.html
+++ b/src/index.html
@@ -183,23 +183,23 @@
             <div class="js-team js-group select">
               <div class="js-select select__basic-option" tabindex="0"></div>
               <ul class="js-options select__options">
-                <li class="js-option select__option">Engineering</li>
-                <li class="js-option select__option">Data</li>
-                <li class="js-option select__option">Design</li>
-                <li class="js-option select__option">Copy & Localisation</li>
-                <li class="js-option select__option">Customer Support</li>
-                <li class="js-option select__option">Product</li>
-                <li class="js-option select__option">Marketing</li>
-                <li class="js-option select__option">Tutor Operation</li>
-                <li class="js-option select__option">Leadership</li>
-                <li class="js-option select__option">Finance/Legal</li>
+                <li class="js-option select__option">Engineering (0)</li>
+                <li class="js-option select__option">Data (0)</li>
+                <li class="js-option select__option">Design (0)</li>
+                <li class="js-option select__option">Copy & Localisation (0)</li>
+                <li class="js-option select__option">Customer Support (0)</li>
+                <li class="js-option select__option">Product (0)</li>
+                <li class="js-option select__option">Marketing (0)</li>
+                <li class="js-option select__option">Tutor Operation (0)</li>
+                <li class="js-option select__option">Leadership (0)</li>
+                <li class="js-option select__option">Finance/Legal (0)</li>
               </ul>
             </div>
 
             <div class="js-location js-group select select--dark ">
               <div class="js-select select__basic-option" tabindex="0"></div>
               <ul class="js-options select__options">
-                <li class="js-option select__option">All locations</li>
+                <li class="js-option select__option" id="all">All locations</li>
                 <li class="js-option select__option">Kyiv</li>
                 <li class="js-option select__option">Barcelona</li>
               </ul>
