fixed photos and add animation for value blocks

--- a/src/index.html
+++ b/src/index.html
@@ -168,85 +168,181 @@
 
           <div class="col-6 col-xl-4">
             <div
-              class="what-we-value__value value js-scroll__element scroll"
+              class="what-we-value__value value value--customer js-scroll__element scroll"
+              data-hover="content"
             >
-              <h3 class="value__title">cusomer first</h3>
-              <img
-                class="value__image"
-                alt="customer first"
-                src="images/values/cusomer_first.svg"
-              >
-              </img>
+              <div class="value__main value__main--active">
+                <h3 class="value__title">customer first</h3>
+                <img
+                  class="value__image"
+                  alt="customer first"
+                  src="images/values/customer_first.svg"
+                >
+                </img>
+              </div>
+
+              <div class="value__additional">
+                <h3
+                  class="value__additional--title"
+                >
+                  Customer obsessed
+                </h3>
+                <p
+                  class="value__additional--text"
+                >
+                  We’re customer first and see humans behind the numbers
+                </p>
+              </div>
             </div>
           </div>
 
           <div class="col-6 col-xl-4">
             <div
-              class="what-we-value__value value js-scroll__element scroll"
+              class="what-we-value__value value value--human js-scroll__element scroll"
+              data-hover="content"
             >
-              <h3 class="value__title">human</h3>
-              <img
-                class="value__image"
-                alt="customer first"
-                src="images/values/cusomer_first.svg"
-              >
-              </img>
+              <div class="value__main value__main--active">
+                <h3 class="value__title">human</h3>
+                <img
+                  class="value__image"
+                  alt="human"
+                  src="images/values/human.svg"
+                >
+                </img>
+              </div>
+
+              <div class="value__additional">
+                <h3
+                  class="value__additional--title"
+                >
+                  Customer obsessed
+                </h3>
+                <p
+                  class="value__additional--text"
+                >
+                  We’re customer first and see humans behind the numbers
+                </p>
+              </div>
             </div>
           </div>
 
           <div class="col-6 col-xl-4">
             <div
-              class="what-we-value__value value js-scroll__element scroll"
+              class="what-we-value__value value value--hackers js-scroll__element scroll"
+              data-hover="content"
             >
-              <h3 class="value__title">hackers</h3>
-              <img
-                class="value__image"
-                alt="customer first"
-                src="images/values/cusomer_first.svg"
-              >
-              </img>
+              <div class="value__main value__main--active">
+                <h3 class="value__title">hackers</h3>
+                <img
+                  class="value__image"
+                  alt="hackers"
+                  src="images/values/hackers.svg"
+                >
+                </img>
+              </div>
+
+              <div class="value__additional">
+                <h3
+                  class="value__additional--title"
+                >
+                  Customer obsessed
+                </h3>
+                <p
+                  class="value__additional--text"
+                >
+                  We’re customer first and see humans behind the numbers
+                </p>
+              </div>
             </div>
           </div>
 
           <div class="col-6 col-xl-4">
             <div
-              class="what-we-value__value value js-scroll__element scroll"
+              class="what-we-value__value value value--hungry js-scroll__element scroll"
+              data-hover="content"
             >
-              <h3 class="value__title">hungry</h3>
-              <img
-                class="value__image"
-                alt="customer first"
-                src="images/values/cusomer_first.svg"
-              >
-              </img>
+              <div class="value__main value__main--active">
+                <h3 class="value__title">hungry</h3>
+                <img
+                  class="value__image"
+                  alt="hungry"
+                  src="images/values/hungry.svg"
+                >
+                </img>
+              </div>
+
+              <div class="value__additional">
+                <h3
+                  class="value__additional--title"
+                >
+                  Customer obsessed
+                </h3>
+                <p
+                  class="value__additional--text"
+                >
+                  We’re customer first and see humans behind the numbers
+                </p>
+              </div>
             </div>
           </div>
 
           <div class="col-6 col-xl-4">
             <div
-              class="what-we-value__value value js-scroll__element scroll"
+              class="what-we-value__value value value--humble js-scroll__element scroll"
+              data-hover="content"
             >
-              <h3 class="value__title">humble</h3>
-              <img
-                class="value__image"
-                alt="customer first"
-                src="images/values/cusomer_first.svg"
-              >
-              </img>
+              <div class="value__main value__main--active">
+                <h3 class="value__title">humble</h3>
+                <img
+                  class="value__image"
+                  alt="humble"
+                  src="images/values/humble.svg"
+                >
+                </img>
+              </div>
+
+              <div class="value__additional">
+                <h3
+                  class="value__additional--title"
+                >
+                  Customer obsessed
+                </h3>
+                <p
+                  class="value__additional--text"
+                >
+                  We’re customer first and see humans behind the numbers
+                </p>
+              </div>
             </div>
           </div>
 
           <div class="col-6 col-xl-4">
             <div
-              class="what-we-value__value value js-scroll__element scroll"
+              class="what-we-value__value value value--curious js-scroll__element scroll"
+              data-hover="content"
             >
-              <h3 class="value__title">curious</h3>
-              <img
-                class="value__image"
-                alt="customer first"
-                src="images/values/cusomer_first.svg"
-              >
-              </img>
+              <div class="value__main value__main--active">
+                <h3 class="value__title">curious</h3>
+                <img
+                  class="value__image"
+                  alt="curious"
+                  src="images/values/curious.svg"
+                >
+                </img>
+              </div>
+
+              <div class="value__additional value__additional--active">
+                <h3
+                  class="value__additional--title"
+                >
+                  Customer obsessed
+                </h3>
+                <p
+                  class="value__additional--text"
+                >
+                  We’re customer first and see humans behind the numbers
+                </p>
+              </div>
             </div>
           </div>
 
