--- a/src/index.html
+++ b/src/index.html
@@ -215,12 +215,12 @@
                 <h3
                   class="value__additional--title"
                 >
-                  Customer obsessed
+                  Human
                 </h3>
                 <p
                   class="value__additional--text"
                 >
-                  We’re customer first and see humans behind the numbers
+                  We believe in diverse teams and candid interaction
                 </p>
               </div>
             </div>
@@ -245,12 +245,12 @@
                 <h3
                   class="value__additional--title"
                 >
-                  Customer obsessed
+                  Hackers
                 </h3>
                 <p
                   class="value__additional--text"
                 >
-                  We’re customer first and see humans behind the numbers
+                  We prioritize what matters and design with pragmatism
                 </p>
               </div>
             </div>
@@ -275,12 +275,12 @@
                 <h3
                   class="value__additional--title"
                 >
-                  Customer obsessed
+                  Hungry
                 </h3>
                 <p
                   class="value__additional--text"
                 >
-                  We’re customer first and see humans behind the numbers
+                  We make bold decisions, dare to dream big and think like co-owners
                 </p>
               </div>
             </div>
@@ -305,12 +305,12 @@
                 <h3
                   class="value__additional--title"
                 >
-                  Customer obsessed
+                  Humble
                 </h3>
                 <p
                   class="value__additional--text"
                 >
-                  We’re customer first and see humans behind the numbers
+                  We keep our egos low and use user insights to make decisions
                 </p>
               </div>
             </div>
@@ -331,16 +331,16 @@
                 </img>
               </div>
 
-              <div class="value__additional value__additional--active">
+              <div class="value__additional">
                 <h3
                   class="value__additional--title"
                 >
-                  Customer obsessed
+                  Curious
                 </h3>
                 <p
                   class="value__additional--text"
                 >
-                  We’re customer first and see humans behind the numbers
+                  Our curiosity helps us view tough situations more creatively
                 </p>
               </div>
             </div>
