add link titles

--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
           <div class="row promo__top">
             <div class="col-12 col-md-2">
               <div class="promo__logo">
-                <a href="https://preply.com/">
+                <a href="https://preply.com/" title="Our main web-page">
                   <img src="./images/logo.png" alt="">
                 </a>
               </div>
@@ -831,7 +831,11 @@
       <div class="container">
         <div class="row footer__top">
           <div class="col-4 col-lg-2">
-            <a href="https://preply.com/" class="footer__logo">
+            <a
+              href="https://preply.com/"
+              class="footer__logo"
+              title="Our main web-page"
+            >
               <img src="./images/logo.png" alt="">
             </a>
           </div>
