--- a/src/index.html
+++ b/src/index.html
@@ -435,7 +435,7 @@
             </p>
           </div>
 
-          <div class="where-to-find__gallery gallery">
+          <div class="where-to-find__gallery gallery js-gallery">
             <div class="gallery__controls js-scroll__element scroll">
               <div class="row justify-content-center">
                 <div class="col-6 col-lg-4 col-xl-3">
@@ -447,7 +447,7 @@
                     >
                     <button
                       type="button"
-                      class="gallery__button gallery__button--active"
+                      class="gallery__button gallery__button--active js-gallery-button"
                     >
                       Kyiv
                     </button>
@@ -463,7 +463,7 @@
                     >
                     <button
                       type="button"
-                      class="gallery__button"
+                      class="gallery__button js-gallery-button"
                     >
                       Barcelona
                     </button>
@@ -480,14 +480,14 @@
                       src="./images/whereToFind/kyiv/1.png"
                       alt="Kyiv"
                       loading="lazy"
-                      class="gallery__photo gallery__photo--show"
+                      class="gallery__photo gallery__photo--show js-gallery-photo"
                     >
 
                     <img
                       src="./images/whereToFind/barcelona/1.png"
                       alt="Barcelona"
                       loading="lazy"
-                      class="gallery__photo"
+                      class="gallery__photo js-gallery-photo"
                     >
                   </div>
                 </div>
@@ -502,14 +502,14 @@
                           src="./images/whereToFind/kyiv/2.png"
                           alt="Kyiv"
                           loading="lazy"
-                          class="gallery__photo gallery__photo--show"
+                          class="gallery__photo gallery__photo--show js-gallery-photo"
                         >
 
                         <img
                           src="./images/whereToFind/barcelona/2.png"
                           alt="Barcelona"
                           loading="lazy"
-                          class="gallery__photo"
+                          class="gallery__photo js-gallery-photo"
                         >
                       </div>
                     </div>
@@ -523,14 +523,14 @@
                             src="./images/whereToFind/kyiv/3.png"
                             alt="Kyiv"
                             loading="lazy"
-                            class="gallery__photo gallery__photo--show"
+                            class="gallery__photo gallery__photo--show js-gallery-photo"
                           >
 
                           <img
                             src="./images/whereToFind/barcelona/3.png"
                             alt="Barcelona"
                             loading="lazy"
-                            class="gallery__photo"
+                            class="gallery__photo js-gallery-photo"
                           >
                         </div>
                       </div>
@@ -543,14 +543,14 @@
                             src="./images/whereToFind/kyiv/4.png"
                             alt="Kyiv"
                             loading="lazy"
-                            class="gallery__photo gallery__photo--show"
+                            class="gallery__photo gallery__photo--show js-gallery-photo"
                           >
 
                           <img
                             src="./images/whereToFind/barcelona/4.png"
                             alt="Barcelona"
                             loading="lazy"
-                            class="gallery__photo"
+                            class="gallery__photo js-gallery-photo"
                           >
                         </div>
                       </div>
