fix spaces between photos in gallery

--- a/src/index.html
+++ b/src/index.html
@@ -107,7 +107,7 @@
 
           <div class="people-behind__gallery">
             <div class="row">
-              <div class="col-5 order-1">
+              <div class="col-5 order-1 px-1 px-lg-2 mb-2 mb-lg-3">
                 <div class="people-behind__img-wrp js-scroll__element scroll">
                   <img
                     src="./images/peopleBehind/1.png"
@@ -118,7 +118,7 @@
                 </div>
               </div>
 
-              <div class="col-12 col-lg-7 order-2">
+              <div class="col-12 col-lg-7 px-1 px-lg-2 mb-2 mb-lg-3 order-2">
                 <div class="people-behind__img-wrp js-scroll__element scroll">
                   <img
                     src="./images/peopleBehind/2.png"
@@ -129,7 +129,7 @@
                 </div>
               </div>
 
-              <div class="col-8 col-lg-4 order-3">
+              <div class="col-8 col-lg-4 px-1 px-lg-2 mb-2 mb-lg-3 order-3">
                 <div class="people-behind__img-wrp js-scroll__element scroll">
                   <img
                     src="./images/peopleBehind/3.png"
@@ -140,7 +140,7 @@
                 </div>
               </div>
 
-              <div class="col-7 col-lg-5 order-1 order-lg-4">
+              <div class="col-7 col-lg-5 px-1 px-lg-2 mb-2 mb-lg-3 order-1 order-lg-4">
                 <div class="people-behind__img-wrp js-scroll__element scroll">
                   <img
                     src="./images/peopleBehind/4.png"
@@ -151,7 +151,7 @@
                 </div>
               </div>
 
-              <div class="col-4 col-lg-3 order-last">
+              <div class="col-4 col-lg-3 px-1 px-lg-2 mb-2 mb-lg-3 order-last">
                 <div class="people-behind__img-wrp js-scroll__element scroll">
                   <img
                     src="./images/peopleBehind/5.png"
@@ -473,7 +473,7 @@
             </div>
 
             <div class="row justify-content-center">
-              <div class="col-12 col-lg-6">
+              <div class="col-12 col-lg-6 px-1 px-lg-2 mb-2 mb-lg-3">
                 <div class="gallery__photo-item gallery__photo--large-height">
                   <div class="gallery__photo-wrp js-scroll__element scroll">
                     <img
@@ -495,7 +495,7 @@
 
               <div class="col-12 col-lg-6 row p-0 px-lg-2">
                 <div class="gallery__group">
-                  <div class=" order-1 order-lg-0 col-12">
+                  <div class=" order-1 order-lg-0 col-12 px-1 px-lg-2 mb-2 mb-lg-3">
                     <div class="gallery__photo-item gallery__photo--small-height">
                       <div class="gallery__photo-wrp js-scroll__element scroll">
                         <img
@@ -516,7 +516,7 @@
                   </div>
 
                   <div class="row m-0">
-                    <div class="col-6">
+                    <div class="col-6 px-1 px-lg-2 mb-2 mb-lg-3">
                       <div class="gallery__photo-item gallery__photo--small-height">
                         <div class="gallery__photo-wrp js-scroll__element scroll">
                           <img
@@ -536,7 +536,7 @@
                       </div>
                     </div>
 
-                    <div class="col-6">
+                    <div class="col-6 px-1 px-lg-2 mb-2 mb-lg-3">
                       <div class="gallery__photo-item gallery__photo--small-height">
                         <div class="gallery__photo-wrp js-scroll__element scroll">
                           <img
